# Learning

./: CMakeLists.txt  hello_world.cpp
include/: Cerc.h  Controller.h  Dreptunghi.h  Figura.h
src/: Cerc.cpp  Controller.cpp  Dreptunghi.cpp  Figura.cpp
